--- a/BlagaUniversity/Web.config
+++ b/BlagaUniversity/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="UniversityContext" connectionString="Data Source=(LocalDb)\v12.0;Initial Catalog=BlagaUniversity;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="UniversityContext" connectionString="Data Source=(LocalDb)\v12.0;Initial Catalog=BlagaUniversity2;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -56,11 +56,11 @@
     </compilers>
   </system.codedom>
   <entityFramework>
-    <contexts>
-      <context type="BlagaUniversity.DAL.UniversityContext, BlagaUniversity">
-        <databaseInitializer type="BlagaUniversity.DAL.UniversityInitializer, BlagaUniversity" />
-      </context>
-    </contexts>
+<!--    <contexts>-->
+<!--      <context type="BlagaUniversity.DAL.UniversityContext, BlagaUniversity">-->
+<!--        <databaseInitializer type="BlagaUniversity.DAL.UniversityInitializer, BlagaUniversity" />-->
+<!--      </context>-->
+<!--    </contexts>-->
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
