--- a/BlagaUniversity/BlagaUniversity.csproj
+++ b/BlagaUniversity/BlagaUniversity.csproj
@@ -152,9 +152,32 @@
     <Compile Include="Migrations\201511020559188_InitialCreate.Designer.cs">
       <DependentUpon>201511020559188_InitialCreate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201511101321544_MaxLenghtOnNames.cs" />
+    <Compile Include="Migrations\201511101321544_MaxLenghtOnNames.Designer.cs">
+      <DependentUpon>201511101321544_MaxLenghtOnNames.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201511101333285_ColumnFirstName.cs" />
+    <Compile Include="Migrations\201511101333285_ColumnFirstName.Designer.cs">
+      <DependentUpon>201511101333285_ColumnFirstName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201511160816020_ComplexDataModel.cs" />
+    <Compile Include="Migrations\201511160816020_ComplexDataModel.Designer.cs">
+      <DependentUpon>201511160816020_ComplexDataModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201511160851283_RemoveEndDateFromDepartment.cs" />
+    <Compile Include="Migrations\201511160851283_RemoveEndDateFromDepartment.Designer.cs">
+      <DependentUpon>201511160851283_RemoveEndDateFromDepartment.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201511160859044_AddCourseForeingKey.cs" />
+    <Compile Include="Migrations\201511160859044_AddCourseForeingKey.Designer.cs">
+      <DependentUpon>201511160859044_AddCourseForeingKey.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\Department.cs" />
     <Compile Include="Models\Enrollment.cs" />
+    <Compile Include="Models\Instructor.cs" />
+    <Compile Include="Models\OfficeAssignment.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\EnrollmentDateGroup.cs" />
@@ -219,6 +242,21 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201511020559188_InitialCreate.resx">
       <DependentUpon>201511020559188_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511101321544_MaxLenghtOnNames.resx">
+      <DependentUpon>201511101321544_MaxLenghtOnNames.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511101333285_ColumnFirstName.resx">
+      <DependentUpon>201511101333285_ColumnFirstName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511160816020_ComplexDataModel.resx">
+      <DependentUpon>201511160816020_ComplexDataModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511160851283_RemoveEndDateFromDepartment.resx">
+      <DependentUpon>201511160851283_RemoveEndDateFromDepartment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511160859044_AddCourseForeingKey.resx">
+      <DependentUpon>201511160859044_AddCourseForeingKey.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
