adds concurency check for departments edit

--- a/BlagaUniversity/BlagaUniversity.csproj
+++ b/BlagaUniversity/BlagaUniversity.csproj
@@ -183,6 +183,10 @@
     <Compile Include="Migrations\201511171412499_AddLocationToDepartment.Designer.cs">
       <DependentUpon>201511171412499_AddLocationToDepartment.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201512151803044_RowVersion.cs" />
+    <Compile Include="Migrations\201512151803044_RowVersion.Designer.cs">
+      <DependentUpon>201512151803044_RowVersion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Course.cs" />
     <Compile Include="Models\Department.cs" />
@@ -291,6 +295,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201511171412499_AddLocationToDepartment.resx">
       <DependentUpon>201511171412499_AddLocationToDepartment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512151803044_RowVersion.resx">
+      <DependentUpon>201512151803044_RowVersion.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
